// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot with contained variant 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 10,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#00aa5b",
          "borderColor": "#00aa5b",
          "borderWidth": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontWeight": "bold",
          },
          Object {
            "color": "white",
          },
        ]
      }
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`Button matches snapshot with outlined variant 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "#00aa5b",
          "borderWidth": 1,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontWeight": "bold",
          },
          Object {
            "color": "#00aa5b",
          },
        ]
      }
    >
      Test
    </Text>
  </View>
</View>
`;
